# mkchlog

./: .mkchlog.yml  Cargo.toml  EXAMPLES.md  README.md
.githooks/: commit-msg  commit_template.txt  pre-commit  prepare-commit-msg
.github/workflows/: changelog.yml  test.yml
src/: changelog.rs  config.rs  git.rs  lib.rs  main.rs  template.rs
src/changelog/: parser.rs
src/git/: command.rs  commit.rs  stdin.rs
tests/: integration_test.rs  integration_test_projects.rs  mkchlog.yml  mkchlog_projects.yml  mkchlog_projects_since_commit.yml
tests/mocks/: mod.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
