[package]
name = "mkchlog"
version = "0.1.0"
edition = "2021"
description = "Changelog generator tool suitable for user-facing changelogs and based on experiences of existing projects."
license = "MIT"
readme = "README.md"
repository = "https://github.com/crywolf/mkchlog"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
indexmap = {version = "2.0.0"}
regex = "1.9.1"
serde_yaml = "0.9.22"
