[workspace]
members = ["wasm"]

[package]
name = "mkchlog"
version = "0.1.0"
edition = "2021"
rust-version = "1.63"
description = "Changelog generator tool suitable for user-facing changelogs and based on experiences of existing projects."
license = "MIT"
readme = "README.md"
repository = "https://github.com/crywolf/mkchlog"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
indexmap = { version = ">= 1.5.2, < 3.0.0" }
regex = "1.7.1"
serde_yaml = { version = ">= 0.8.26, < 0.10.0" }
